# Crypto_Bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot_config.json  docker-compose.yml  metadata.json  pyproject.toml  requirements.txt  setup.py
alembic/: env.py
alembic/versions/: 0a7e6b378714_.py  4ec29d9ee18e_.py
src/: main.py
src/client/: account.py  base.py  bases.py  klines.py  orders.py
src/config/: bot_config.json  config.py  logger_config.py
src/data/: consts.py  gatekeeper_journal.json  trade_journal.json
src/database/: config.py  core.py  crud.py  models.py  schemas.py
src/scripts/: averaging.py  bot.py  first_buy.py  sell.py
src/src/: consts.py  trade_journal.json
src/utils/: exceptions.py  gatekeeper.py  journal_manager.py  journal_manger.py  klines_manager.py  laps_manager.py  lines_manager.py  metadata_manager.py  states.py  statistic_manager.py  telenotify.py  triggers.py
tests/: test_averaging.py  test_bot.py  test_client_klines.py  test_client_orders.py  test_first_buy.py  test_gatekeeper.py  test_journal_manager.py  test_klines_manager.py  test_lines_manager.py  test_metadata_manager.py  test_sell.py  test_statistic_manager.py  test_telenotify.py  test_triggers.py  test_utils.py
web/: Dockerfile  main.py
web/api/auth/: views.py
web/api/index/: views.py
web/api/info/: views.py
web/api/settings/: views.py
web/config/: config.py
web/static/css/: index.css  (+4 more)
web/templates/: base.html  index.html  info.html  settings.html  statistic.html
web/utils/: auth.py  balance.py  bybit_client.py  telegram_sender.py
(+2 files in other folders)
