[project]
name = "cmx"
version = "3.0.0"
description = ""
authors = [
    {name = "Zemphix",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pybit (>=5.11.0,<6.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "ta (>=0.11.0,<0.12.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
setuptools = "^80.9.0"


[tool.poetry.scripts]
cmx = "bin.cmx:main"


[tool.poetry]
packages = [
    { include = "bin" }
]